<resources>
    <string name="app_name">Retrofit</string>
    <string name="format_ItemTitle" >Название: %s</string>
    <string name="format_ItemActualTime" >Фактическое время: %s</string>
    <string name="format_ItemStatus" >Статус заявки: %s</string>
    <string name="format_ItemLocation" >Местоположение: %s</string>
    <string name="format_ItemDescription" >Описание: %s</string>
    <string name="format_ItemSpecialist" >Специалист: %s %s</string>
    <string name="format_title" >Название: %s</string>
    <string name="format_ActualTime" >Фактическое время: %s</string>
    <string name="format_status" >Статус: %s</string>
    <string name="format_location" >Местоположение: %s</string>
    <string name="text_button_click">Приступить</string>
    <string name="text_button">Закрыть</string>
    <string name="text_dialog" />
    <string-array name="status">
        <item>Все</item>
        <item>Открыта</item>
        <item>Занята</item>
        <item>Закрыта</item>
    </string-array>
    <string-array name="status_translate">
        <item>all</item>
        <item>open</item>
        <item>in_progress</item>
        <item>closed</item>
    </string-array>
</resources>
