<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginBottom="1dp"
    android:padding="12dp"
    android:background="@android:color/white"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/format_title"/>
    <TextView
        android:id="@+id/tvActualTime"
        android:layout_below="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/format_ActualTime"/>
    <TextView
        android:id="@+id/tvStatus"
        android:layout_below="@+id/tvActualTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/format_status"/>
    <TextView
        android:id="@+id/tvLocation"
        android:layout_below="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/format_location"/>
</RelativeLayout>